--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,6 +6,6 @@ import Layout from '../layouts/BlogPost.astro';
 	title="About Me"
 	description="Lorem ipsum dolor sit amet"
 	pubDate={new Date('August 08 2021')}
-	heroImage="/blog-placeholder-about.jpg"
+	heroImage="/public/blog-placeholder-about.jpg"
 >
 </Layout>
