--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} Your name here. All rights reserved.
+	&copy; {today.getFullYear()} masa5555. All rights reserved.
 	<div class="social-links">
 		<a href="https://github.com/masa5555" target="_blank">
 			<span class="sr-only">masa5555's GitHub repo</span>
