--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import { SITE_TITLE } from '../consts';
 		<h2><span>{SITE_TITLE}</span></h2>
 		<div class="internal-links">
 			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/blog/about">About</HeaderLink>
+			<!-- <HeaderLink href="/blog/about">About</HeaderLink> -->
 		</div>
 		<div class="social-links">
 			<a href="https://github.com/masa5555" target="_blank">
