--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,11 +1,6 @@
 ---
-import Layout from '../layouts/BlogPost.astro';
+import Layout from '../layouts/About.astro';
 ---
 
-<Layout
-	title="About Me"
-	description="Lorem ipsum dolor sit amet"
-	pubDate={new Date('August 08 2021')}
-	heroImage="/blog/blog-placeholder-about.jpg"
->
+<Layout>
 </Layout>
