--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,9 +96,16 @@ const posts = (await getCollection('blog')).sort(
 								<a href={`/blog/${post.slug}/`}>
 									<img width={720} height={360} src={post.data.heroImage} alt="" />
 									<h4 class="title">{post.data.title}</h4>
-									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
-									</p>
+									<div style={{display: "flex", justifyContent: "space-between"}}>
+										<div>{
+											post.data.tags.map((tag) => (
+												<span style={{fontSize: '14px', background: 'white', margin: "4px"}}>#{tag}</span>
+											))
+										}</div>
+										<div class="date">
+											{post.data.pubDate && <FormattedDate date={post.data.pubDate} />}
+										</div>
+									</div>
 								</a>
 							</li>
 						))
