--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,21 +16,19 @@
     0 8px 24px rgba(var(--gray), 33%), 0 16px 32px rgba(var(--gray), 33%);
 }
 @font-face {
-  font-family: "Atkinson";
-  src: url("/blog/fonts/atkinson-regular.woff") format("woff");
+  font-family: "Kosugi", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Atkinson";
-  src: url("/blog/fonts/atkinson-bold.woff") format("woff");
+  font-family: "Kosugi", sans-serif;
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 body {
-  font-family: "Atkinson", sans-serif;
+  font-family: "Kosugi", sans-serif;
   margin: 0;
   padding: 0;
   text-align: left;
