--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -6,12 +6,12 @@ import '../styles/global.css';
 interface Props {
 	title: string;
 	description: string;
-	image?: string;
+	heroImage?: string;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image } = Astro.props;
+const { title, description, heroImage } = Astro.props;
 ---
 
 <!-- Global Metadata -->
@@ -40,11 +40,11 @@ const { title, description, image } = Astro.props;
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content={new URL(image ?? '', Astro.url)} />
+<meta property="og:image" content={new URL(heroImage ?? '', Astro.url)} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={new URL(image ?? '', Astro.url)} />
+<meta property="twitter:image" content={new URL(heroImage ?? '', Astro.url)} />
