tool: umamiのtrackコード追加

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,10 @@ const posts = (await getCollection("blog")).sort(
 <html lang="ja">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+		<script
+			defer
+			src="https://cloud.umami.is/script.js"
+			data-website-id="93907223-54b4-44a5-a036-9ebd8280e038"></script>
 		<link
 			rel="alternate"
 			type="application/rss+xml"
